--- a/frontend/src/style/SchemeDetails.css
+++ b/frontend/src/style/SchemeDetails.css
@@ -93,7 +93,7 @@ input[type="file"]:hover {
   box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 0.2), inset -2px -2px 4px rgba(255, 255, 255, 0.6);
 }
 
-h2 {
+.h2 {
   margin-top: 30px;
   margin-bottom: 15px;
   font-size: 1.8rem;
@@ -103,12 +103,12 @@ h2 {
   text-transform: capitalize;
 }
 
-ul li {
+.ul li {
   font-size: 1rem;
   line-height: 1.6;
 }
 
-p strong {
+.p strong {
   color: #333;
   font-weight: bold;
 }
